--- a/app/services/auth/package.json
+++ b/app/services/auth/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.97",
     "bcryptjs": "^2.4.3",
