--- a/app/services/auth/package.json
+++ b/app/services/auth/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
