--- a/app/services/auth/package.json
+++ b/app/services/auth/package.json
@@ -15,12 +15,14 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "@types/node": "^22.9.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
